src/static/index.css
:root {
    --background: white;
    --color: darkslategray;
}

* {
    box-sizing: border-box;

}
html, body {
    font-family: "Newsreader", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 1.1em;
    color: var(--color);
    height: 100%;
    background: var(--background);
}

header {
    width: 100%;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

button {
    background-color: transparent;
    color: var(--color);
    border: none;
    padding: 0.5rem 1rem;
    font-size: 1.2rem;
    cursor: pointer;
}

a {
    color: var(--color);
}

.bold {
    font-weight: 700;
}

.left-text {
    text-align: start;
    width: 100%;
}
.right-text {
    text-align:end;
    width: 100%;
}


.navbar {
    border-bottom: 1px solid var(--color);
    width: 100%;
    padding: 0 5%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}

.red {
    color:crimson;
}

.bottom-border {
    border-bottom: 1px solid var(--color);
}

.hidden-link {
    text-decoration: none;
    color: var(--color);
}

.navbar > .links > a {
    margin: 1rem 1rem;
    font-size: 1.2rem;
    color: var(--color);
}

.container {
    width: 100%;
    height: 100%;
    padding: 0 10%;
    margin: 0;
}

.themes {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 1rem;
    width: 100%;
    border-bottom: 1px solid var(--color);
}
.themes > a {
    color: var(--color);
    font-size: 1.2rem;
}
.themes > span {
    color: var(--color);
    font-size: 1.2rem;
}

.post-list {
    display: flex;
    align-items: left;
    width: 100%;
    height: 100%;
    flex-direction: column;

    
}

.column {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 1rem;
    border-right: 1px solid var(--color);
}
.row {
    display: flex;
    flex-direction: row;
    width: 100%;
    padding: 1vh;
    border-bottom: 1px solid var(--color);
}
.sidebar {
    width: 20%;
    height: 100%;
    padding: 1rem;
    border-right: 1px solid var(--color);

    
}
.w-10 {
    width: 10%;
    height: 100%;
}
.h-100 {
    height: fit-content;
}
.h-expand {
    height: max-content;
}

